--- a/backend/DevVerse.API/appsettings.json
+++ b/backend/DevVerse.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=devverse_db;Username=root;Password=root"
+  },
+  "AllowedHosts": "http://localhost:3000"
 }
