feat: add domain models, DTOs, and database context setup
This commit introduces the core domain models, DTOs, and the database context for the DevVerse application. It includes entities for users, posts, tech stacks, followers, and authentication, along with their respective configurations and mappings. The database context is set up with PostgreSQL and includes initial migrations.

--- a/backend/DevVerse.API/appsettings.json
+++ b/backend/DevVerse.API/appsettings.json
@@ -1,12 +1,17 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=devverse_db;Username=root;Password=root,Port=5001"
+  },
+  "Jwt": {
+    "Issuer": "DevVerse",
+    "Audience": "DevVerse",
+    "TokenExpiryInMinutes": 60
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=devverse_db;Username=root;Password=root"
   },
   "AllowedHosts": "http://localhost:3000"
 }
