feat(auth): add auth service, controller, and JWT integration
Implement authentication service with registration, login, and JWT token generation. Add AuthController to handle auth endpoints. Update appsettings.json for JWT and database configuration. Include AutoMapper for DTO mapping. Disable Swagger in production. Add frontend dependencies for UI components.

--- a/backend/DevVerse.API/appsettings.json
+++ b/backend/DevVerse.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=devverse_db;Username=root;Password=root,Port=5001"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=devverse_db;Username=root;Password=root"
   },
   "Jwt": {
     "Issuer": "DevVerse",
@@ -13,5 +13,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "http://localhost:3000"
+  "AllowedHosts": "*"
 }
